# lidar_perception

./: CMakeLists.txt  README.md  package.xml
include/lidar_perception/: base_object_builder.h  object.cc  object.h  tracker_config.h
include/lidar_perception/common/: convex_hullxy.h  geometry_util.cc  geometry_util.h  graph_util.cc  pcl_types.h
include/lidar_perception/hungarian/: hungarian_bigraph_matcher.cc
launch/: launch.launch  lidar_perception.launch  tf_offline.launch  tf_static.launch
params/: changshu20200325_OnBBB.txt  lidar_perception.yaml
src/: lidar_perception.cpp  lidar_perception.h  lidar_perception_node.cpp  types.h
src/cluster/: EuclideanCluster.cpp  EuclideanCluster.h  dbscan.cpp  dbscan.h  region_growing_segmentation.cpp  region_growing_segmentation.h
src/hm_tracker/: base_filter.h  base_matcher.h  base_tracker.h  feature_descriptor.cc  feature_descriptor.h  hm_tracker.cc  hm_tracker.h  hungarian_matcher.cc  hungarian_matcher.h  kalman_filter.cc  kalman_filter.h  object_track.cc  object_track.h  track_object_distance.cc  track_object_distance.h  tracked_object.cc  tracked_object.h
src/min_box/: min_box.cc  min_box.h
src/pcl_clip/: pcl_clip.cpp  pcl_clip.h
src/remove_ground/: remove_ground.cpp  remove_ground.h
urdf/: G2003.urdf  test.urdf  xiongan.urdf
